# hal_telink

./: .gitignore  CMakeLists.txt
tlsr9/: CMakeLists.txt  Kconfig
tlsr9/ble/: license.txt
tlsr9/ble/common/: utility.c
tlsr9/ble/stack/ble/controller/: os_sup.h
tlsr9/common/: b91_sleep.c  b91_sleep.h  bit.h  compiler.h  fifo.h  types.h
tlsr9/crypto/mbedtls/: CMakeLists.txt  aes_alt.h  ecp_alt.h  mbedtls-tlsr9-conf.h  read_me.md
tlsr9/crypto/mbedtls/internal/: ecp_alt_b91_backend.c  ecp_alt_b91_backend_test.c  entropy_poll_alt.c  multithread.c  multithread.h
tlsr9/crypto/mbedtls/internal/compatibility/: aes_alt.c  ecp_alt.c
tlsr9/drivers/B91/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  audio.c  audio.h  clock.c  clock.h  core.h  dma.h  driver_b91.h  emi.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  mdec.h  mspi.h  pke.c  pke.h  plic.c  plic.h  pm.c  pm.h  pwm.c  pwm.h  rf.c  rf.h  s7816.c  s7816.h  spi.c  spi.h  (+14 more)
tlsr9/drivers/B91/compatibility_pack/: cmpt.h
tlsr9/drivers/B91/ext_driver/: ext_pm.h
tlsr9/drivers/B91/reg_include/: adc_reg.h  aes_reg.h  analog_reg.h  audio_reg.h  dma_reg.h  gpio_reg.h  i2c_reg.h  mdec_reg.h  mspi_reg.h  pke_reg.h  plic_reg.h  pwm_reg.h  register_b91.h  rf_reg.h  soc.h  spi_reg.h  stimer_reg.h  swire_reg.h  timer_reg.h  trng_reg.h  uart_reg.h  usb_reg.h
zephyr/: module.yml
